--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@
 *.jar
 *.war
 *.ear
+
+# Eclipse specific files
+.classpath
+
+# ignore all bin directories
+# matches "bin" in any subfolder
+bin/
+
+# ignore all target directories
+target/
+
+# ignore all files ending with ~
+*~ 
+
+# ignore all .settings directories
+.settings/
